<resources>
    <string name="app_name">InventoryTracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product name</string>
    <string name="add">ADD</string>
    <string name="capture_image">Capture Image</string>
    <string name="browse_image">Browse Image</string>
    <string name="add_product">Add Product</string>
    <string name="product_quantity">Product\nquantity</string>
    <string name="quantity">Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="price">Price</string>
    <string name="supplier">Supplier</string>
    <string name="name">Name</string>
    <string name="supplier_name">Supplier name</string>
    <string name="phone">Phone</string>
    <string name="supplier_phone">Supplier Phone #</string>
    <string name="fax">Fax</string>
    <string name="supplier_fax">Supplier Fax #</string>
    <string name="email">Email</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="billing_address">Billing address</string>
    <string name="supplier_address_line_1">Supplier Address Line 1</string>
    <string name="supplier_address_line_2">Supplier Address Line 2</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="zip_codde">Zip codde</string>
    <string name="country">Country</string>
    <string name="save_supplier">Add Supplier</string>
    <string name="state">State</string>
    <string name="add_new_product">Add new Product</string>
    <string name="product">Products</string>
    <string name="add_new_supplier">Add New Supplier</string>
    <string name="product_choice">Product</string>
    <string name="supplier_choice">Supplier</string>
    <string name="action_add_title">Add new</string>
    <string name="name_required">Supplier name is required</string>
    <string name="please_add">Please add the number of</string>
    <string name="failled_to">Add Product failled</string>
    <string name="success_add">Product added successfully</string>
    <string name="product_name_required">Product name is require</string>
    <string name="must_implement">Must be implemented</string>
    <string name="added_product_warning">has already added  do you want to modify it</string>
    <string name="warning">Warning</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="check_input">Check your input and try again</string>
    <string name="empty">Empty</string>
    <string name="add_some_product">Press button below to \nAdd some product</string>
    <string name="qty">Qty</string>
    <string name="sale_1">sale 1</string>
    <string name="price2">Price</string>
    <string name="product2">Product</string>
    <string name="quantity_in_stock">Quantiy in Stock</string>
    <string name="average_price">Average Price</string>
    <string name="product_supplier">Product Supplier</string>
    <string name="add_more_product">increase quantity</string>
    <string name="remove">Decrease quantity</string>
    <string name="order">Order More</string>
    <string name="delete">Delete All</string>
    <string name="product_image">product image</string>
    <string name="quantity_required">Quantity is required</string>
    <string name="no_more_left">There\' s no more </string>
    <string name="in_stock"> left in stock</string>
    <string name="supplier_exist_already">this supplier name already existed</string>
    <string name="success_sold">%1$d %2$s successfully sold </string>
    <string name="order_more">Order more %1$s</string>
    <string name="error">error</string>
    <string name="about_to_delete">You\' re about to delete the %1$s  from your record
 Do you want to proceed?</string>
    <string name="delete_success">record delete succeffully</string>
    <string name="update_success">update Success</string>
    <string name="failled_update">failled to update</string>
    <string name="edit_product">Edit Product</string>
    <string name="add_supplier">add supplier</string>
    <string name="delete_record">Delete %1$s Record</string>
    <string name="delete_all_product">Delete all product</string>
    <string name="delete_all_supplier">Delete all Supplier</string>
    <string name="delete_supplier_message">You are about to delete all Supplier record\n Do you want to continue</string>
    <string name="delete_product_message">You are about to delete all product record\n Do you want to continue</string>
    <string name="add_num">How many Would you like to add</string>
    <string name="not_enough">not enough in stock to get %1$d</string>
    <string name="name_is_required_provider">Product need a name</string>
    <string name="quantity_required_provider">Quantity required</string>
    <string name="price_required_provider">Price is required</string>
    <string name="picture_required_provider">Picture of the product is required</string>
</resources>
