<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/darker_gray"
              android:orientation="vertical"
              tools:context="com.julienlaurent.learning.com.inventorytracker.fragments.AddSupplier">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/add_new_supplier"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            style="@style/add_title"
            android:layout_row="0"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/supplier_name"
            style="@style/add_input"
            android:layout_row="0"
            android:hint="@string/supplier_name"
            android:inputType="text|textCapWords|textAutoComplete"
            android:maxLines="1"/>

        <TextView
            style="@style/add_title"
            android:layout_row="1"
            android:text="@string/phone"/>

        <EditText
            android:id="@+id/supplier_phone"
            style="@style/add_input"
            android:layout_gravity="center_vertical"
            android:layout_row="1"
            android:hint="@string/supplier_phone"
            android:inputType="phone"/>

        <TextView
            style="@style/add_title"
            android:layout_marginBottom="20dp"
            android:layout_row="2"
            android:text="@string/fax"/>

        <EditText
            android:id="@+id/supplier_fax"
            style="@style/add_input"
            android:layout_marginBottom="20dp"
            android:layout_row="2"
            android:hint="@string/supplier_fax"
            android:inputType="phone"/>

        <TextView
            style="@style/add_title"
            android:layout_row="3"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/supplier_email"
            style="@style/add_input"
            android:layout_row="3"
            android:hint="@string/supplier_email"
            android:inputType="textEmailAddress"/>

        <TextView
            style="@style/add_title"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/billing_address"/>

        <EditText
            android:id="@+id/supplier_address_line_1"
            style="@style/add_input"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="5"
            android:hint="@string/supplier_address_line_1"
            android:inputType="text|textCapWords"/>

        <EditText
            android:id="@+id/supplier_address_line_2"
            style="@style/add_input"
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="6"
            android:hint="@string/supplier_address_line_2"
            android:inputType="text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="7">

            <EditText
                android:id="@+id/supplier_city"
                style="@style/add_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/city"
                android:inputType="text|textCapWords"/>

            <EditText
                android:id="@+id/supplier_state"
                style="@style/add_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/state"
                android:inputType="text|textCapWords"
                android:maxLength="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="8">

            <EditText
                android:id="@+id/supplier_zip_code"
                style="@style/add_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/zip_code"
                android:inputType="number"
                android:maxLength="5"/>

            <EditText
                android:id="@+id/supplier_country"
                style="@style/add_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/country"
                android:inputType="text|textCapWords"/>
        </LinearLayout>
    </GridLayout>

    <Button
        android:id="@+id/save_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:text="@string/save_supplier"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>
</LinearLayout>
