<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/darker_gray"
              android:orientation="vertical"
              tools:context="com.julienlaurent.learning.com.inventorytracker.fragments.AddNewProduct">

    <TextView
        android:id="@+id/add_new_product_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/add_new_product"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            style="@style/add_title"
            android:layout_row="0"
            android:text="@string/product_name"/>

        <EditText
            android:id="@+id/product_name"
            style="@style/add_input"
            android:layout_row="0"
            android:hint="@string/product_name"
            android:inputType="text|textCapWords|textAutoComplete"/>

        <TextView
            style="@style/add_title"
            android:layout_row="1"
            android:text="@string/product_quantity"/>

        <EditText
            android:id="@+id/product_quantity"
            style="@style/add_input"
            android:layout_gravity="center_vertical"
            android:layout_row="1"
            android:hint="@string/quantity"
            android:inputType="number"/>

        <TextView
            style="@style/add_title"
            android:layout_marginBottom="20dp"
            android:layout_row="2"
            android:text="@string/product_price"/>

        <EditText
            android:id="@+id/product_price"
            style="@style/add_input"
            android:layout_marginBottom="20dp"
            android:layout_row="2"
            android:hint="@string/price"
            android:inputType="numberDecimal"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            style="@style/add_title"
            android:text="@string/supplier"/>

        <Spinner
            android:id="@+id/product_supplier"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/background_light"/>

        <ImageButton
            android:id="@+id/add_supplier_new_product"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/add"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_supplier"/>
        </LinearLayout>
    </GridLayout>

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/product_image"/>

    <LinearLayout
        android:id="@+id/image_container_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/product_capture_image"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/capture_image"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/product_browse_image"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/browse_image"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/save_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_background"
        android:text="@string/add_product"
        android:textColor="@android:color/white"/>
</LinearLayout>
