<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.julienlaurent.learning.com.inventorytracker.fragments.ProductDetails">


    <ImageView
        android:id="@+id/product_image_detail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/nopicture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/product_image"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/product_name_detail"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:maxLines="2"
                android:paddingBottom="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingTop="4dp"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/quantity_in_stock"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/product_quantity_details"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingTop="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/average_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/product_price_detail"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingTop="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="@string/product_supplier"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/product_supplier_details"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"/>
        </LinearLayout>
            <LinearLayout
                android:id="@+id/increase_decrease_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_product_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/button_background"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/add_more_product"/>

                <Button
                    android:id="@+id/remove_product_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/button_background"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/remove"/>
            </LinearLayout>

            <Button
                android:id="@+id/order_from_supplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/order"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"/>

            <Button
                android:id="@+id/delete_all_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
